/api/v2/signup-lesson and admin/first-visit-schedule,/week-schedule,/send-notification I finish refactored GET,POST mapping. Уроки сохраняются теперь нормально и получение по DTO, Админ панель GET маппинги работают средее есть что дароботать. Теперь осталось POST маппинг /lock-lesson и отправка уведомления в теллеграм а именно получение chatID у пользователья.