@@ -5,25 +5,22 @@ import kidd.house.zerde.dto.signupLesson.LessonTypeDto;
 import kidd.house.zerde.dto.signupLesson.SignUpLessonResponse;
 import kidd.house.zerde.dto.signupLesson.SignupRequestDto;
 import kidd.house.zerde.model.entity.Child;
-import kidd.house.zerde.model.entity.Diagnosis;
 import kidd.house.zerde.model.entity.Lesson;
 import kidd.house.zerde.model.entity.Parent;
 import kidd.house.zerde.model.record.LessonDay;
 import kidd.house.zerde.model.status.LessonStatus;
 import kidd.house.zerde.model.type.GroupType;
 import kidd.house.zerde.model.type.LessonType;
-import kidd.house.zerde.repo.ChildRepo;
-import kidd.house.zerde.repo.DiagnosisRepo;
 import kidd.house.zerde.repo.LessonRepo;
 import kidd.house.zerde.repo.ParentRepo;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
-
+@Slf4j
 @Service
 public class SignupService {
     @Autowired
@@ -31,62 +28,82 @@ public class SignupService {
     @Autowired
     private ParentRepo parentRepo;
     @Autowired
-    private ChildRepo childRepo;
-    @Autowired
-    private DiagnosisRepo diagnosisRepo;
-    @Autowired
     private MailSenderService mailSenderService;  // Сервис для отправки email
     public String saveSignup(SignupRequestDto signupRequest, String status) {
-        // Логика сохранения записи с начальным статусом "draft"
-        saveLesson(signupRequest);
-        saveChild(signupRequest);
-        saveDiagnosis(signupRequest);
-        saveParent(signupRequest);
-        System.out.println("Сохранение записи с начальным статусом: " + status);
-        // Проверка, сохранился ли урок
-        boolean isLessonSaved = verifySignup(signupRequest);
-
-        if (isLessonSaved) {
-            System.out.println("Урок успешно сохранен.");
-        } else {
-            System.out.println("Ошибка сохранения урока.");
+        // Валидация запроса
+        if (signupRequest == null) {
+            log.error("Пустой запрос на запись урока");
+            throw new IllegalArgumentException("Запрос не может быть пустым.");
         }
-        return status;
-    }
-    public void saveLesson(SignupRequestDto signupRequest){
-        Lesson lesson = new Lesson();
-        lesson.setLessonName(signupRequest.lessonTypeDto().lessonName());
-        lesson.setFrom(signupRequest.lessonTypeDto().freeLessons().getFirst().dateFrom());
-        lesson.setTo(signupRequest.lessonTypeDto().freeLessons().getFirst().dateTo());
-        lesson.setLessonDay(signupRequest.lessonDay());
-        lesson.setLessonTime(signupRequest.lessonTime());
-        lesson.setLessonType(LessonType.LOGOPED);
-        lesson.setLessonStatus(LessonStatus.SCHEDULED);
-        lesson.setGroupType(GroupType.GROUP);
-        lessonRepo.save(lesson);
-    }
-    public void saveChild(SignupRequestDto signupRequest){
-        Child child = new Child();
-        child.setFirstName(signupRequest.childName());
-        child.setAge(signupRequest.age());
-        childRepo.save(child);
-    }
-    public void saveDiagnosis(SignupRequestDto signupRequest){
-        Diagnosis diagnosis = new Diagnosis();
-        diagnosis.setName(signupRequest.diagnosis());
-        diagnosisRepo.save(diagnosis);
-    }
-    public void saveParent(SignupRequestDto signupRequest){
+
+        if (signupRequest.parentName() == null || signupRequest.parentPhone() == null || signupRequest.parentEmail() == null) {
+            log.warn("Данные родителя неполные: {}", signupRequest);
+            throw new IllegalArgumentException("Пожалуйста, укажите данные родителя.");
+        }
+
+        if (signupRequest.childName() == null || signupRequest.age() == 0) {
+            log.warn("Данные ребенка неполные: {}", signupRequest);
+            throw new IllegalArgumentException("Пожалуйста, укажите данные ребенка.");
+        }
         Parent parent = new Parent();
         parent.setParentName(signupRequest.parentName());
         parent.setParentPhone(signupRequest.parentPhone());
         parent.setParentEmail(signupRequest.parentEmail());
         parentRepo.save(parent);
+
+        Child child = new Child();
+        child.setFirstName(signupRequest.childName());
+        child.setAge(signupRequest.age());
+        //Не нужен потому что cascade = CascadeType.ALL указан в model
+        //childRepo.save(child);
+
+        Lesson lesson = new Lesson();
+        lesson.setLessonName(signupRequest.lessonTypeDto().lessonName());
+
+        // !!! Копируем freeLessons в изменяемый список
+        List<FreeLesson> freeLessons = new ArrayList<>(signupRequest.lessonTypeDto().freeLessons());
+        if (freeLessons.isEmpty()) {
+            log.error("Выберите свободное время!");
+            throw new IllegalArgumentException("Свободное время для урока не указано.");
+        }
+
+        lesson.setFrom(freeLessons.get(0).dateFrom());
+        lesson.setTo(freeLessons.get(0).dateTo());
+
+        lesson.setLessonDay(signupRequest.lessonDay());
+        lesson.setLessonTime(signupRequest.lessonTime());
+        lesson.setLessonType(LessonType.LOGOPED);
+        lesson.setLessonStatus(LessonStatus.SCHEDULED);
+        lesson.setGroupType(GroupType.GROUP);
+
+        lesson.setParent(parent);
+
+        child.setLesson(lesson);
+        lesson.getChildren().add(child);
+
+        lessonRepo.save(lesson);
+
+        // Логика сохранения записи с начальным статусом "draft"
+        log.info("Сохранение записи с начальным статусом: " + status);
+        // Проверка, сохранился ли урок
+        boolean isLessonSaved = verifySignup(signupRequest);
+
+        if (isLessonSaved) {
+            log.info("Урок успешно сохранен.");
+        } else {
+            log.error("Ошибка сохранения урока.");
+        }
+        return status;
     }
     public boolean verifySignup(SignupRequestDto signupRequest) {
-        Lesson lesson = lessonRepo.findByFromAndTo(
-                signupRequest.lessonTypeDto().freeLessons().getFirst().dateFrom(),
-                signupRequest.lessonTypeDto().freeLessons().getFirst().dateTo()
+        Optional<Lesson> lessonOptional = lessonRepo.findByFromAndToAndLessonTime(
+                signupRequest.lessonTypeDto().freeLessons().get(0).dateFrom(),
+                signupRequest.lessonTypeDto().freeLessons().get(0).dateTo(),
+                signupRequest.lessonTime()
+        );
+
+        Lesson lesson = lessonOptional.orElseThrow(() ->
+                new IllegalStateException("Lesson совпадают!")
         );
 
         // Возвращаем true, если урок найден, иначе false
@@ -94,17 +111,23 @@ public class SignupService {
     }
 
     public String updateStatus(SignupRequestDto signupRequest, String newStatus) {
-        // Логика обновления статуса заявки
-        Lesson lesson = lessonRepo.findByLessonTimeAndFromAndTo(
-                signupRequest.lessonTime(),
-                signupRequest.lessonTypeDto().freeLessons().getFirst().dateFrom(),
-                signupRequest.lessonTypeDto().freeLessons().getFirst().dateTo()
+        Optional<Lesson> optionalLesson = lessonRepo.findByFromAndToAndLessonTime(
+                signupRequest.lessonTypeDto().freeLessons().get(0).dateFrom(),
+                signupRequest.lessonTypeDto().freeLessons().get(0).dateTo(),
+                signupRequest.lessonTime()
         );
+
+        Lesson lesson = optionalLesson.orElseThrow(() ->
+                new IllegalStateException("Lesson не найден для указанных параметров")
+        );
+
         lesson.setLessonStatus(LessonStatus.RESERVED);
         lessonRepo.save(lesson);
-        System.out.println("Статус заявки обновлен на: " + newStatus);
+
+        log.warn("Статус заявки обновлен на: " + newStatus);
         return newStatus;
     }
+
 
     public void sendNotification(SignupRequestDto signupRequest) {
         // Логика отправки уведомления (в будущем можно интегрировать WhatsApp/Telegram API)
@@ -118,8 +141,8 @@ public class SignupService {
                 "Уважаемый(ая) %s, у вас запланирован урок с преподавателем %s, который состоится с %s до %s в комнате %s.",
                 signupRequest.childName(),
                 "Gregory",
-                signupRequest.lessonTypeDto().freeLessons().getFirst().dateFrom(),
-                signupRequest.lessonTypeDto().freeLessons().getFirst().dateTo(),
+                signupRequest.lessonTypeDto().freeLessons().get(0).dateFrom(),
+                signupRequest.lessonTypeDto().freeLessons().get(0).dateTo(),
                 "202"
         );
         // Отправка email родителю, если указан email
